<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:scrollbars="horizontal"
    android:background="@color/tabSelectedTextColor"
    android:layout_height="84dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@color/tabSelectedTextColor"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/sys"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:src="@drawable/home_sm_icon"
                android:scaleType="centerCrop"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/sys"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ewm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:src="@drawable/home_ewm_icon"
                android:scaleType="centerCrop"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/erweima"
                android:layout_marginTop="@dimen/dp_10"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/white"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mpgm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:src="@drawable/home_mp_icon"
                android:scaleType="centerCrop"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/menpiao"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tssp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:src="@drawable/home_sc_icon"
                android:scaleType="centerCrop"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/shangcheng"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/dp_10"
                android:textSize="@dimen/sp_14"
                android:layout_height="wrap_content" />


        </LinearLayout>


    </LinearLayout>

</ScrollView>
